--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,20 @@
-name: SimplePlugin
+name: ExperienceCraft
 version: '0.1'
-main: com.pinont.simplePlugin.SimplePlugin
+main: com.pinont.experiencesCraft.Core
 api-version: '1.21'
 authors: [ PinozenTH ]
 description: This is an example plugin that is a part of PiXLib plugin
+softdepend: [ PiXLib ]
+
+commands:
+  trash:
+    description: Trash item in hand
+    usage: /trash
+    permission: experiencecraft.trash
+  itemcreator:
+    aliases:
+      - ic
+      - itemcreate
+    description: Spawn entity
+    usage: /entity
+    permission: experiencecraft.entity
